# hypatio-app

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Dockerfile  README.md  buildspec.yml  db.sqlite3  dev-requirements.in  dev-requirements.txt  docker-compose.override.yml  docker-compose.yml  gunicorn-nginx-entry.sh  hypatio.conf  manage.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt
.github/workflows/: release.yml  requirements-update.yml  scan.yml  test.yml  unit-test.yml
app/: db.sqlite3  requirements.txt
app/api/: api.py  auth.py  scheme.py  serializers.py  urls.py
app/contact/: forms.py  urls.py  views.py
app/datachallenges/: models.py  urls.py  views.py
app/dataprojects/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/hypatio/: api.py  auth.py  auth0authenticate.py  dbmiauthn_services.py  dbmiauthz_services.py  file_services.py  forms.py  local_settings.py  middleware.py  models.py  sciauthz_services.py  scireg_services.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
app/manage/: __init__.py  admin.py  api.py  apps.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
app/pdf/: __init__.py  apps.py  generators.py  rasterize.js  (+2 more)
dataprojects/: models.py  urls.py  views.py
docker-entrypoint-init.d/: 43-pdf.sh  45-django-q.sh
hypatio/: auth0authenticate.py  settings.py  urls.py
requirements/: constraints.txt  requirements.txt
tokenlogin/: apps.py  urls.py  views.py
(+447 files in other folders)
